k8s/namespace.yaml
# File: k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cop-pipeline
  labels:
    name: cop-pipeline
